removed buggy media player